--- a/.babelrc
+++ b/.babelrc
@@ -23,7 +23,8 @@
           "shared-components": "./src/shared-components",
           "store": "./src/store",
           "styling": "./src/styling",
-          "utilities": "./src/utilities"
+          "utilities": "./src/utilities",
+          "src": "./src"
         }
       }
     ],
